--- a/LaunchCode - Java Track/.classpath
+++ b/LaunchCode - Java Track/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
 	<classpathentry kind="lib" path="SlumlordImages/Background 1.jpg"/>
 	<classpathentry kind="lib" path="images/Background 1.jpg"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.39-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
